# crewai_insta_post_generator

./: README.md  demo.ipynb  pyproject.toml  report.md  requirements.txt
blobs/: report.md
src/: test.ipynb
src/crewai_instapost/: crew.py  main.py
src/crewai_instapost/config/: agents.yaml  tasks.yaml
