[project]
name = "crewai_instapost"
version = "0.1.0"
description = "crewai_instapost using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0"
]

[project.scripts]
crewai_instapost = "crewai_instapost.main:run"
run_crew = "crewai_instapost.main:run"
train = "crewai_instapost.main:train"
replay = "crewai_instapost.main:replay"
test = "crewai_instapost.main:test"
run_with_trigger = "crewai_instapost.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
