[project]
name = "crewai_instapost"
version = "0.1.0"
description = "crewai_instapost using crewAI"
authors = [{ name = "Husen Basha", email = "23ca032.husen@sjec.ac.in" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai-tools>=1.8.0",
    "crewai[tools]==1.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.17.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-groq>=1.1.1",
    "litellm>=1.75.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
]

[project.scripts]
crewai_instapost = "crewai_instapost.main:run"
run_crew = "crewai_instapost.main:run"
train = "crewai_instapost.main:train"
replay = "crewai_instapost.main:replay"
test = "crewai_instapost.main:test"
run_with_trigger = "crewai_instapost.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
